# SET09121-Games-Engineering

./: CMakeLists.txt  LICENSE  README.md
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
pacman/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_ai_component.cpp  cmp_enemy_ai_component.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.cpp  cmp_sprite.h  entity.cpp  entity.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  player.h  scene.cpp  scene.h  system_renderer.cpp
practical_1/: main.cpp
space_invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
tile_engine/: entity.cpp  entity.h  main.cpp  player.cpp
